cretion of about us section

--- a/index.html
+++ b/index.html
@@ -111,50 +111,87 @@ Our goal is to transform food waste into valuable resources by combining scienti
   <div class="container mx-auto px-6">
     <div class="text-center mb-12">
       <h2 class="text-4xl font-bold text-gray-800 mb-4">The Team</h2>
-      <p class="text-lg text-gray-600 max-w-3xl mx-auto">Meet our project academic mentors and contributors.</p>
+      <p class="text-lg text-gray-600 max-w-3xl mx-auto">Meet our diverse team driving the BYP-NOVA project.</p>
     </div>
-
-    <div class="flex flex-col items-center">
-      <!-- Academic Mentors (Top Level) -->
-      <div class="bg-blue-100 border-2 border-blue-500 rounded-lg px-8 py-4 mb-4 text-center font-bold text-lg shadow">
-        Project Academic Mentors
-      </div>
-
-      <!-- Vertical line -->
-      <div class="w-1 h-8 bg-blue-400"></div>
-
-      <!-- Mentors -->
-      <div class="flex flex-wrap justify-center gap-12 mb-6">
+    <div class="grid md:grid-cols-2 gap-12">
+      <!-- Frederic Debeaufort -->
+      <div class="flex items-center bg-[#28a9df] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up">
+        <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/photo%20labo%20-%20Frederic%20DEBEAUFORT.jpg" alt="Frederic Debeaufort" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
         <div>
-          <div class="bg-white border-2 border-blue-500 rounded-lg px-8 py-4 text-center shadow">
-            <span class="font-semibold">Prof. Concetta Maria Messina</span><br>
-            <span class="text-blue-700">University of Palermo (Italy)</span>
-          </div>
-        </div>
-        <div>
-          <div class="bg-white border-2 border-blue-500 rounded-lg px-8 py-4 text-center shadow">
-            <span class="font-semibold">Prof. Frédéric Debeaufort</span><br>
-            <span class="text-blue-700">University of Burgundy (France)</span>
-          </div>
+          <h3 class="text-white text-2xl font-extrabold mb-1">Frederic Debeaufort</h3>
+          <p class="text-white text-lg font-semibold">Full professor in food and packaging engineering and sciences</p>
+          <p class="text-[#e0f5ff] mt-2">Packaging technology, edible barriers, coatings, biopolymer films</p>
         </div>
       </div>
-
-      <!-- Vertical line -->
-      <div class="w-1 h-8 bg-blue-400"></div>
-
-      <!-- Contributors -->
-      <div class="flex flex-wrap justify-center gap-8">
-        <div class="bg-white border-2 border-blue-400 rounded-lg px-6 py-3 text-center shadow">
-          <span class="font-semibold">Michelle Marchan</span><br>
-          <span class="text-blue-600">University of Palermo</span>
+      <!-- Alessandra Aiello -->
+      <div class="flex items-center bg-[#22b993] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up delay-150">
+        <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/Immagine%20WhatsApp%202025-09-02%20ore%2014.24.09_daf5d4f8%20-%20Alessandra%20Aiello.jpg" alt="Alessandra Aiello" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
+        <div>
+          <h3 class="text-white text-2xl font-extrabold mb-1">Alessandra Aiello</h3>
+          <p class="text-white text-lg font-semibold">PhD Student</p>
+          <p class="text-[#e0fff7] mt-2">
+            I am a Marine Biology graduate and a PhD student in Biodiversity at the University of Palermo. My research is all about sustainable innovation in the fisheries industry, with the goal of improving the quality and shelf life of seafood products. I’m developing innovative tech solutions to help local businesses and push for more sustainable preservation methods, benefitting both the environment and the economy.
+          </p>
         </div>
-        <div class="bg-white border-2 border-blue-400 rounded-lg px-6 py-3 text-center shadow">
-          <span class="font-semibold">Alessandra Aiello</span><br>
-          <span class="text-blue-600">University of Palermo</span>
+      </div>
+      <!-- Michelle Marchan -->
+      <div class="flex items-center bg-[#0d233d] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up delay-300">
+        <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/Michelle%20MarchanImmagine%20WhatsApp%202025-09-03%20ore%2014.50.22_1a5877e5.jpg" alt="Michelle Marchan" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
+        <div>
+          <h3 class="text-white text-2xl font-extrabold mb-1">Michelle Marchan</h3>
+          <p class="text-white text-lg font-semibold">PhD student</p>
+          <p class="text-[#c8d8e4] mt-2">
+          I am a  Ph.D. student in biodiversity and sustainable blue biotechnologies, with expertise in sustainable food systems. Passionate about developing innovative solutions for food valorization, waste management, and sustainability-driven policies, bridging research and practice in biotechnology and the circular economy.
+          </p>
         </div>
-        <div class="bg-white border-2 border-blue-400 rounded-lg px-6 py-3 text-center shadow">
-          <span class="font-semibold">Clement Poulaine</span><br>
-          <span class="text-blue-600">University of Burgundy</span>
+      </div>
+      <!-- Clément Poulain -->
+      <div class="flex items-center bg-[#2e555c] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up delay-450">
+        <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/IMG-20210616-WA0004%20-%20Cl%C3%A9ment%20Poulain.jpg" alt="Clément Poulain" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
+        <div>
+          <h3 class="text-white text-2xl font-extrabold mb-1">Clément Poulain</h3>
+          <p class="text-white text-lg font-semibold">PhD Student</p>
+          <p class="text-[#e2f2ef] mt-2">
+            I'm a PhD student working for the PRIMA Mediet4All project. My research at the University of Burgundy focuses on food packaging engineering, mass transfer, polymer networks, and bioactive compounds in edible, biodegradable, and biobased materials. Now I am working to improve biodegradable and water-sensitive plastics made from natural products.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Fade-in animation keyframes -->
+  <style>
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(40px);}
+      100% { opacity: 1; transform: translateY(0);}
+    }
+    .animate-fade-in-up {
+      animation: fadeInUp 1s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+    }
+    .delay-150 { animation-delay: 0.15s; }
+    .delay-300 { animation-delay: 0.3s; }
+    .delay-450 { animation-delay: 0.45s; }
+    .animate-fade-in-up { opacity: 1; }
+  </style>
+  <script>
+    // Simple fade-in on scroll for team cards
+    document.addEventListener("DOMContentLoaded", () => {
+      const cards = document.querySelectorAll("#team .animate-fade-in-up");
+      function reveal() {
+        cards.forEach(card => {
+          const rect = card.getBoundingClientRect();
+          if (rect.top < window.innerHeight - 50) {
+            card.style.opacity = 1;
+            card.style.transform = "translateY(0)";
+          }
+        });
+      }
+      window.addEventListener("scroll", reveal);
+      reveal();
+    });
+  </script>
+</section>
+</section>
+</section>
         </div>
       </div>
     </div>
@@ -250,6 +287,33 @@ Our goal is to transform food waste into valuable resources by combining scienti
     </div>
 </section>
     </main>
+<!-- Newsletter Section START -->
+<section id="newsletter" class="py-16 md:py-24 bg-gray-50">
+  <div class="container mx-auto px-6 text-center">
+    <h2 class="text-3xl font-bold text-gray-800 mb-4">Sign up for our Newsletter</h2>
+    <p class="text-lg text-gray-600 mb-6">Get the latest updates about BYP-NOVA directly to your inbox.</p>
+ <!-- MailerLite Universal -->
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '1793451');
+</script>
+<!-- End MailerLite Universal -->
+    <div class="flex flex-col items-center gap-4 mt-8">
+      <button class="ml-onclick-form bg-green-700 text-white px-6 py-2 rounded font-semibold hover:bg-green-800 transition"
+        onclick="ml('show', 'h9lOyU', true)">Click here to show form</button>
+      <a class="ml-onclick-form text-green-700 font-semibold underline hover:text-green-900 transition"
+        href="javascript:void(0)" onclick="ml('show', 'h9lOyU', true)">Click here to show form</a>
+    </div>
+  </div>
+</section>
+<!-- Newsletter Section END -->
+
+<footer class="bg-slate-800 text-white">
+  <!-- ...footer content... -->
+</footer>
 
     <footer class="bg-slate-800 text-white"> <div class="container mx-auto px-6 py-12">
             <div class="grid md:grid-cols-3 gap-8">
