Aggiunte nuove modifiche al sito

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@ Our goal is to transform food waste into valuable resources by combining scienti
                     </div>
                     <div class="flex justify-center">
                         <<div class="flex justify-center my-8">
-  <img 
+  img 
     src="https://img.freepik.com/premium-vector/food-waste-word-concepts-banner-types-organics-waste-contact-your-waste-hauler-infographics-with-linear-icons-green-background-isolated-typography-outline-rgb-color-illustration_106317-2631.jpg?semt=ais_hybrid&w=740"
     alt="Food Waste Valorisation Banner"
     class="rounded-lg shadow-lg max-w-xs md:max-w-md h-auto"
-</div>">
+</div>
                     </div>
                 </div>
             </div>
@@ -326,7 +326,7 @@ Our goal is to transform food waste into valuable resources by combining scienti
                 </div>
                 <div id="contact">
                     <h4 class="text-lg font-bold mb-4">Get In Touch</h4>
-                    <p class="text-slate-400">contact@byp-nova.eu</p>
+                    <p class="text-slate-400">byp.nova.hub@gmail.com</p>
                     <p class="text-slate-400 mt-4">Funded by the FORTHEM Alliance</p>
                 </div>
             </div>
