Aggiunte nuove modifiche al sito

--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@ Our goal is to transform food waste into valuable resources by combining scienti
                     </div>
                     <div class="flex justify-center">
                         <<div class="flex justify-center my-8">
-  img 
-    src="https://img.freepik.com/premium-vector/food-waste-word-concepts-banner-types-organics-waste-contact-your-waste-hauler-infographics-with-linear-icons-green-background-isolated-typography-outline-rgb-color-illustration_106317-2631.jpg?semt=ais_hybrid&w=740"
-    alt="Food Waste Valorisation Banner"
-    class="rounded-lg shadow-lg max-w-xs md:max-w-md h-auto"
+  <img src="https://img.freepik.com/foto-gratuito/avanzi-di-pesce-cotto-e-altro-simbolo-di-riciclaggio-di-cibo-avanzato_23-2148764781.jpg"
+  alt="Riciclaggio di cibo avanzato"
+  class="rounded-lg shadow-lg max-w-xs md:max-w-md h-auto">
 </div>
                     </div>
                 </div>
