Aggiunte nuove modifiche al sito

--- a/index.html
+++ b/index.html
@@ -120,9 +120,17 @@ Our goal is to transform food waste into valuable resources by combining scienti
     <div class="text-center mb-12">
       <h2 class="text-4xl font-bold text-gray-800 mb-4">The Team</h2>
       <p class="text-lg text-gray-600 max-w-3xl mx-auto">Meet our diverse team driving the BYP-NOVA project.</p>
+<!-- Prof. Concetta Maria Messina -->
+<div class="flex items-center bg-[#28a9df] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up">
+  <img src="img/IMG-20220127-WA0004-concetta-messina.jpg" alt="Concetta Maria Messina" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
+  <div>
+    <h3 class="text-white text-2xl font-extrabold mb-1">Concetta Maria Messina</h3>
+    <p class="text-white text-lg font-semibold">Full Professor in aquatic production and sustainable use of marine biological resources</p>
+  </div>
+</div>
     </div>
     <div class="grid md:grid-cols-2 gap-12">
-      <!-- Frederic Debeaufort -->
+      <!-- Prof. Frederic Debeaufort -->
       <div class="flex items-center bg-[#28a9df] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up">
         <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/photo%20labo%20-%20Frederic%20DEBEAUFORT.jpg" alt="Frederic Debeaufort" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
         <div>
