Update team section layout for improved symmetry

--- a/index.html
+++ b/index.html
@@ -119,19 +119,25 @@ Our goal is to transform food waste into valuable resources by combining scienti
   <div class="container mx-auto px-6">
     <div class="text-center mb-12">
       <h2 class="text-4xl font-bold text-gray-800 mb-4">The Team</h2>
+    <section id="team" class="py-16 md:py-24 bg-white">
+  <div class="container mx-auto px-6">
+    <div class="text-center mb-12">
+      <h2 class="text-4xl font-bold text-gray-800 mb-4">The Team</h2>
       <p class="text-lg text-gray-600 max-w-3xl mx-auto">Meet our diverse team driving the BYP-NOVA project.</p>
-<!-- Prof. Concetta Maria Messina -->
-<div class="flex items-center bg-[#28a9df] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up">
-  <img src="img/IMG-20220127-WA0004-concetta-messina.jpg" alt="Concetta Maria Messina" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
-  <div>
-    <h3 class="text-white text-2xl font-extrabold mb-1">Concetta Maria Messina</h3>
-    <p class="text-white text-lg font-semibold">Full Professor in aquatic production and sustainable use of marine biological resources</p>
-  </div>
-</div>
     </div>
-    <div class="grid md:grid-cols-2 gap-12">
+
+    <!-- Professors Row -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12 justify-items-center">
+      <!-- Prof. Concetta Maria Messina -->
+      <div class="flex items-center bg-[#28a9df] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl animate-fade-in-up">
+        <img src="https://github.com/BYPNOVA/bypnova-website/raw/cf917b0137f6cc1a909a42c9d6825039ec0207e6/img/IMG-20220127-WA0004-concetta-messina.jpg" alt="Concetta Maria Messina" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
+        <div>
+          <h3 class="text-white text-2xl font-extrabold mb-1">Concetta Maria Messina</h3>
+          <p class="text-white text-lg font-semibold">Full Professor in aquatic production and sustainable use of marine biological resources</p>
+        </div>
+      </div>
       <!-- Prof. Frederic Debeaufort -->
-      <div class="flex items-center bg-[#28a9df] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up">
+      <div class="flex items-center bg-[#28a9df] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl animate-fade-in-up">
         <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/photo%20labo%20-%20Frederic%20DEBEAUFORT.jpg" alt="Frederic Debeaufort" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
         <div>
           <h3 class="text-white text-2xl font-extrabold mb-1">Frederic Debeaufort</h3>
@@ -139,8 +145,12 @@ Our goal is to transform food waste into valuable resources by combining scienti
           <p class="text-[#e0f5ff] mt-2">Packaging technology, edible barriers, coatings, biopolymer films</p>
         </div>
       </div>
+    </div>
+
+    <!-- PhD Students: two in one row, one centered below -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8 justify-items-center">
       <!-- Alessandra Aiello -->
-      <div class="flex items-center bg-[#22b993] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up delay-150">
+      <div class="flex items-center bg-[#22b993] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl animate-fade-in-up delay-150">
         <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/Immagine%20WhatsApp%202025-09-02%20ore%2014.24.09_daf5d4f8%20-%20Alessandra%20Aiello.jpg" alt="Alessandra Aiello" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
         <div>
           <h3 class="text-white text-2xl font-extrabold mb-1">Alessandra Aiello</h3>
@@ -151,18 +161,20 @@ Our goal is to transform food waste into valuable resources by combining scienti
         </div>
       </div>
       <!-- Michelle Marchan -->
-      <div class="flex items-center bg-[#0d233d] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up delay-300">
+      <div class="flex items-center bg-[#0d233d] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl animate-fade-in-up delay-300">
         <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/Michelle%20MarchanImmagine%20WhatsApp%202025-09-03%20ore%2014.50.22_1a5877e5.jpg" alt="Michelle Marchan" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
         <div>
           <h3 class="text-white text-2xl font-extrabold mb-1">Michelle Marchan</h3>
           <p class="text-white text-lg font-semibold">PhD student</p>
           <p class="text-[#c8d8e4] mt-2">
-          I am a  Ph.D. student in biodiversity and sustainable blue biotechnologies, with expertise in sustainable food systems. Passionate about developing innovative solutions for food valorization, waste management, and sustainability-driven policies, bridging research and practice in biotechnology and the circular economy.
+            I am a  Ph.D. student in biodiversity and sustainable blue biotechnologies, with expertise in sustainable food systems. Passionate about developing innovative solutions for food valorization, waste management, and sustainability-driven policies, bridging research and practice in biotechnology and the circular economy.
           </p>
         </div>
       </div>
-      <!-- Clément Poulain -->
-      <div class="flex items-center bg-[#2e555c] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8 animate-fade-in-up delay-450">
+    </div>
+    <div class="flex justify-center">
+      <!-- Clément Poulain, centered below -->
+      <div class="flex items-center bg-[#2e555c] rounded-3xl p-6 shadow-lg transform transition duration-700 hover:scale-105 hover:shadow-2xl animate-fade-in-up delay-450 max-w-xl">
         <img src="https://github.com/BYPNOVA/bypnova-website/raw/b1e7826e3b8583316b88b2bc56188bbb1a29c909/img/IMG-20210616-WA0004%20-%20Cl%C3%A9ment%20Poulain.jpg" alt="Clément Poulain" class="w-32 h-32 rounded-full border-4 border-white object-cover object-center mr-6 shadow-xl">
         <div>
           <h3 class="text-white text-2xl font-extrabold mb-1">Clément Poulain</h3>
@@ -173,7 +185,74 @@ Our goal is to transform food waste into valuable resources by combining scienti
         </div>
       </div>
     </div>
+
+    <!-- Fade-in animation keyframes and JS (reuse your existing) -->
+    <style>
+      @keyframes fadeInUp {
+        0% { opacity: 0; transform: translateY(40px);}
+        100% { opacity: 1; transform: translateY(0);}
+      }
+      .animate-fade-in-up {
+        animation: fadeInUp 1s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+      }
+      .delay-150 { animation-delay: 0.15s; }
+      .delay-300 { animation-delay: 0.3s; }
+      .delay-450 { animation-delay: 0.45s; }
+      .animate-fade-in-up { opacity: 1; }
+    </style>
+    <script>
+      // Simple fade-in on scroll for team cards
+      document.addEventListener("DOMContentLoaded", () => {
+        const cards = document.querySelectorAll("#team .animate-fade-in-up");
+        function reveal() {
+          cards.forEach(card => {
+            const rect = card.getBoundingClientRect();
+            if (rect.top < window.innerHeight - 50) {
+              card.style.opacity = 1;
+              card.style.transform = "translateY(0)";
+            }
+          });
+        }
+        window.addEventListener("scroll", reveal);
+        reveal();
+      });
+    </script>
   </div>
+</section>
+
+    <!-- Fade-in animation keyframes and JS (reuse your existing) -->
+    <style>
+      @keyframes fadeInUp {
+        0% { opacity: 0; transform: translateY(40px);}
+        100% { opacity: 1; transform: translateY(0);}
+      }
+      .animate-fade-in-up {
+        animation: fadeInUp 1s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+      }
+      .delay-150 { animation-delay: 0.15s; }
+      .delay-300 { animation-delay: 0.3s; }
+      .delay-450 { animation-delay: 0.45s; }
+      .animate-fade-in-up { opacity: 1; }
+    </style>
+    <script>
+      // Simple fade-in on scroll for team cards
+      document.addEventListener("DOMContentLoaded", () => {
+        const cards = document.querySelectorAll("#team .animate-fade-in-up");
+        function reveal() {
+          cards.forEach(card => {
+            const rect = card.getBoundingClientRect();
+            if (rect.top < window.innerHeight - 50) {
+              card.style.opacity = 1;
+              card.style.transform = "translateY(0)";
+            }
+          });
+        }
+        window.addEventListener("scroll", reveal);
+        reveal();
+      });
+    </script>
+  </div>
+</section>
   <!-- Fade-in animation keyframes -->
   <style>
     @keyframes fadeInUp {
