Aggiunte nuove modifiche al sito

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Our goal is to transform food waste into valuable resources by combining scienti
                         </ul>
                     </div>
                     <div class="flex justify-center">
-                        <<div class="flex justify-center my-8">
+                        <div class="flex justify-center my-8">
   <img src="https://img.freepik.com/foto-gratuito/avanzi-di-pesce-cotto-e-altro-simbolo-di-riciclaggio-di-cibo-avanzato_23-2148764781.jpg"
   alt="Riciclaggio di cibo avanzato"
   class="rounded-lg shadow-lg max-w-xs md:max-w-md h-auto">
