--- a/index.html
+++ b/index.html
@@ -378,6 +378,36 @@ Our goal is to transform food waste into valuable resources by combining scienti
     </div>
 </section>
     </main>
+<!-- News & Updates Section START -->
+<section id="news" class="py-16 md:py-24 bg-white">
+  <div class="container mx-auto px-6">
+    <h2 class="text-3xl font-bold mb-6 text-center">News & Updates</h2>
+    <div class="bg-gray-50 p-6 rounded-lg shadow-lg mb-8">
+      <h3 class="text-xl font-semibold mb-2">BYP-NOVA: A FORTHEM Alliance Project on Food Waste and Byproduct Innovation</h3>
+      <p class="mb-2">
+        The BYP-NOVA project, developed within the FORTHEM Alliance, aims to connect students and other stakeholders from different universities to exchange ideas on reducing food waste and valorizing byproducts through innovative approaches.
+      </p>
+      <p class="mb-2">
+        Developed in collaboration with the University of Burgundy, the project team includes Michelle Marchan and Alessandra Aiello from the University of Palermo, and Clément Poulain from the University of Burgundy.
+      </p>
+      <p class="mb-2">
+        The team has created a website to promote knowledge sharing and collaboration, and organized a series of seminars that brought together over 40 participants, including students and stakeholders, all engaged in sustainability and innovation in the food sector.
+      </p>
+      <p class="mb-4">
+        BYP-NOVA represents a growing network of young professionals and partners committed to rethinking how we use and reuse resources. 🌱
+      </p>
+      <div class="flex flex-wrap gap-2">
+        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#FORTHEMAlliance</span>
+        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#BYPNOVA</span>
+        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#Sustainability</span>
+        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#Innovation</span>
+        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#FoodWaste</span>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- News & Updates Section END -->
+
 <!-- Newsletter Section START -->
 <section id="newsletter" class="py-16 md:py-24 bg-gray-50">
   <div class="container mx-auto px-6 text-center">
