Aggiunte nuove modifiche al sito

--- a/index.html
+++ b/index.html
@@ -339,10 +339,40 @@ Our goal is to transform food waste into valuable resources by combining scienti
                     <div class="bg-white rounded-lg shadow-md overflow-hidden group">
                         <img src="https://placehold.co/600x400/58D68D/FFFFFF?text=Research" alt="Research Image" class="w-full h-48 object-cover group-hover:opacity-80 transition-opacity duration-300">
                         <div class="p-6">
-                            <p class="text-sm text-gray-500 mb-2">July 15, 2025 | RESEARCH</p>
-                            <h3 class="text-xl font-bold mb-3 text-gray-800">New Enzyme Unlocks Potential in Citrus Peels</h3>
-                            <p class="text-gray-600 mb-4">Our latest paper details a novel enzymatic process for extracting high-value pectin...</p>
+                            <p class="text-sm text-gray-500 mb-2">October 21, 2025 | RESEARCH</p>
+                            <h3 class="text-xl font-bold mb-3 text-gray-800">BYP-NOVA: Cross-University Seminars Unite Palermo and Burgundy on Food Waste Innovation</h3>
+                            <p class="text-gray-600 mb-4">Our latest publication highlights BYP-NOVA, a FORTHEM project that brought cross-university seminars to Palermo and Burgundy to foster innovation in food-waste reduction and byproduct valorization...</p>
                             <a href="#" class="font-bold text-green-700 hover:text-green-800 transition duration-300">Read More →</a>
+  <p>Click to read the full article.</p>
+</div>
+<!-- Modal for News Publication -->
+<div id="newsModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:999;">
+  <div style="max-width:600px; margin:80px auto; background:white; padding:40px; border-radius:16px; position:relative;">
+    <span style="position:absolute; right:16px; top:16px; font-size:24px; cursor:pointer;" onclick="closeModal()">&times;</span>
+    <h2>BYP-NOVA: A FORTHEM Alliance Project on Food Waste and Byproduct Innovation</h2>
+    <p>
+      The BYP-NOVA project, developed within the FORTHEM Alliance, aims to connect students and other stakeholders from different universities to exchange ideas on reducing food waste and valorizing byproducts through innovative approaches.<br><br>
+      Developed in collaboration with the University of Burgundy, the project team includes Michelle Marchan and Alessandra Aiello from the University of Palermo, and Clément Poulain from the University of Burgundy.<br><br>
+      The team has created a website to promote knowledge sharing and collaboration, and organized a series of seminars that brought together over 40 participants, including students and stakeholders, all engaged in sustainability and innovation in the food sector.<br><br>
+      BYP-NOVA represents a growing network of young professionals and partners committed to rethinking how we use and reuse resources. 🌱
+    </p>
+    <div style="margin-top:16px;">
+      <span style="background:#e7f6d7; color:#3a873a; padding:4px 12px; border-radius:15px; margin-right:4px;">#FORTHEMAlliance</span>
+      <span style="background:#e7f6d7; color:#3a873a; padding:4px 12px; border-radius:15px; margin-right:4px;">#BYPNOVA</span>
+      <span style="background:#e7f6d7; color:#3a873a; padding:4px 12px; border-radius:15px; margin-right:4px;">#Sustainability</span>
+      <span style="background:#e7f6d7; color:#3a873a; padding:4px 12px; border-radius:15px; margin-right:4px;">#Innovation</span>
+      <span style="background:#e7f6d7; color:#3a873a; padding:4px 12px; border-radius:15px;">#FoodWaste</span>
+    </div>
+  </div>
+</div>
+<script>
+function openModal() {
+  document.getElementById("newsModal").style.display = "block";
+}
+function closeModal() {
+  document.getElementById("newsModal").style.display = "none";
+}
+</script>
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-md overflow-hidden group">
@@ -378,36 +408,6 @@ Our goal is to transform food waste into valuable resources by combining scienti
     </div>
 </section>
     </main>
-<!-- News & Updates Section START -->
-<section id="news" class="py-16 md:py-24 bg-white">
-  <div class="container mx-auto px-6">
-    <h2 class="text-3xl font-bold mb-6 text-center">News & Updates</h2>
-    <div class="bg-gray-50 p-6 rounded-lg shadow-lg mb-8">
-      <h3 class="text-xl font-semibold mb-2">BYP-NOVA: A FORTHEM Alliance Project on Food Waste and Byproduct Innovation</h3>
-      <p class="mb-2">
-        The BYP-NOVA project, developed within the FORTHEM Alliance, aims to connect students and other stakeholders from different universities to exchange ideas on reducing food waste and valorizing byproducts through innovative approaches.
-      </p>
-      <p class="mb-2">
-        Developed in collaboration with the University of Burgundy, the project team includes Michelle Marchan and Alessandra Aiello from the University of Palermo, and Clément Poulain from the University of Burgundy.
-      </p>
-      <p class="mb-2">
-        The team has created a website to promote knowledge sharing and collaboration, and organized a series of seminars that brought together over 40 participants, including students and stakeholders, all engaged in sustainability and innovation in the food sector.
-      </p>
-      <p class="mb-4">
-        BYP-NOVA represents a growing network of young professionals and partners committed to rethinking how we use and reuse resources. 🌱
-      </p>
-      <div class="flex flex-wrap gap-2">
-        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#FORTHEMAlliance</span>
-        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#BYPNOVA</span>
-        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#Sustainability</span>
-        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#Innovation</span>
-        <span class="bg-green-100 text-green-800 text-xs px-3 py-1 rounded-full font-semibold">#FoodWaste</span>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- News & Updates Section END -->
-
 <!-- Newsletter Section START -->
 <section id="newsletter" class="py-16 md:py-24 bg-gray-50">
   <div class="container mx-auto px-6 text-center">
